syntax = "proto3";

option csharp_namespace = "TaniLink_Backend";

package account_proto;

service Accounts {
  rpc Register (RegisterReq) returns (RegisterRes);
  rpc Login (LoginReq) returns (LoginRes);
  rpc GetProfile (Empty) returns (AccountDetail);
  rpc Testing (Empty) returns (Test);
}

message Empty {}

enum Role {
  Admin = 0;
  Petani = 1;
  Mitra = 2;
  User = 3;
}

message Test{
  string Test = 1;
}

message AccountDetail{
  string Id = 1;
  string FullName = 2;
  string Email = 3;
  string PhoneNumber = 4;
  repeated string Role = 5;
}

message RegisterReq {
  string FullName = 1;
  string Email = 2;
  string Password = 3;
  Role Role = 4;
}

message RegisterRes {
  AccountDetail Account = 1;
}

message LoginReq {
  string Email = 1;
  string Password = 2;
}

message LoginRes {
	message Token {
		string AccessToken = 1;
		int32 Expires = 2;
	}
	Token Tokens = 1;
	AccountDetail Account = 2;
}

